--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,7 +1,21 @@
-build:
-  image: latest
+# .readthedocs.yaml
+# Read the Docs configuration file
+# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
 
+# Required
+version: 2
+
+# Set the version of Python and other tools you might need
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.10"
+
+# Build documentation in the root directory with Sphinx
+sphinx:
+  configuration: docs/conf.py
+
+# Explicitly set the version of Python and its requirements
 python:
-  version: 3.6
   install:
     - requirements: docs/requirements.txt
