--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,2 +1,6 @@
+# Defining the exact version will make sure things don't break
+breathe==4.35.0
+readthedocs-sphinx-search==0.3.1
+sphinx==7.2.6
 sphinx-sitemap==2.2.0
-breathe==4.20.0
+sphinx_rtd_theme==2.0.0
